fix: repair encoding in cv data and locales

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -134,8 +134,8 @@
       "english": "مستوى الإنجليزية"
     },
     "linkedinLabel": "LinkedIn",
-    "linkedinTitle": "??????? ??? LinkedIn",
-    "linkedinDescription": "???? ??????? ????????? ????????? ???????."
+    "linkedinTitle": "Connect on LinkedIn",
+    "linkedinDescription": "Follow my projects, posts, and professional updates."
   },
   "footer": {
     "rights": "جميع الحقوق محفوظة.",
@@ -184,9 +184,9 @@
     "error": "حدث خطأ أثناء الحصول على الإجابة. حاول مرة أخرى.",
     "suggestions": {
       "skills": [
-        "??? ????? ??? ???????? ?? ??????? ?????????",
-        "??? ???? ??????? ?? ?????? ????????? ????????? ?????? ?????",
-        "?? ????? ?? ????? ?? ????? ??????"
+        "لماذا اخترت التخصص في الذكاء الاصطناعي؟",
+        "ما هي أقوى مهارة لديك؟",
+        "كيف تعلمت هذه التقنيات؟"
       ],
       "projects": [
         "ما أكبر تحدٍ في مشروع Conecta Panamá؟",
@@ -199,9 +199,9 @@
         "ما نوع العمل الذي تبحث عنه؟"
       ],
       "education": [
-        "????? ?? ????? ????????.",
-        "????? ????? ????? ?????? ??????????",
-        "???? ????? ?? ??????? ?????????"
+        "لماذا تدرس تخصصين؟",
+        "كيف تجمع بين الذكاء الاصطناعي والهندسة الصناعية؟",
+        "ما أهدافك الأكاديمية؟"
       ]
     }
   },
@@ -439,58 +439,58 @@
       "unknown": "خطأ غير معروف."
     },
     "customize": {
-      "title": "????? ????? ????????",
-      "subtitle": "???? ??????? ????????? ????????? ???????? ???? ????? ????? ???????.",
+      "title": "Customize the demo",
+      "subtitle": "Adjust layout, spacing, cards, and colors to preview your ideal CV style.",
       "layout": {
-        "label": "??? ???????",
-        "4xl": "?????",
-        "5xl": "??????",
-        "6xl": "????"
+        "label": "Layout width",
+        "4xl": "Compact",
+        "5xl": "Balanced",
+        "6xl": "Wide"
       },
       "density": {
-        "label": "????? ???????",
-        "compact": "??????",
-        "comfortable": "?????"
+        "label": "Content density",
+        "compact": "Compact",
+        "comfortable": "Comfortable"
       },
       "cardStyle": {
-        "label": "??? ????????",
-        "solid": "????",
-        "glass": "??????"
+        "label": "Card style",
+        "solid": "Solid",
+        "glass": "Glass"
       },
       "accent": {
-        "label": "??? ???????",
-        "blue": "????",
-        "emerald": "?????",
-        "amber": "???????",
-        "violet": "??????"
+        "label": "Accent color",
+        "blue": "Blue",
+        "emerald": "Emerald",
+        "amber": "Amber",
+        "violet": "Violet"
       },
       "sections": {
-        "label": "???????",
-        "hero": "???????",
-        "about": "????",
-        "skills": "????????",
-        "experience": "???????",
-        "education": "???????",
-        "projects": "????????",
-        "certificates": "????????",
-        "languages": "??????"
+        "label": "Sections",
+        "hero": "Hero",
+        "about": "About",
+        "skills": "Skills",
+        "experience": "Experience",
+        "education": "Education",
+        "projects": "Projects",
+        "certificates": "Certificates",
+        "languages": "Languages"
       },
       "actions": {
-        "visible": "????",
-        "hidden": "????",
-        "show": "?????",
-        "hide": "?????",
-        "moveUp": "????",
-        "moveDown": "????",
-        "reset": "????? ???"
+        "visible": "Visible",
+        "hidden": "Hidden",
+        "show": "Show",
+        "hide": "Hide",
+        "moveUp": "Move up",
+        "moveDown": "Move down",
+        "reset": "Reset"
       }
     }
   },
   "intro": {
-    "title": "????? ?????? ?????????",
-    "subtitle": "???? ???? ??????? ?????? ?????? ?????? ?????.",
-    "cta": "??? ???????",
-    "loadingTitle": "????? ????? ??????",
-    "progressLabel": "??????: {progress}%"
+    "title": "Activate interactive CV",
+    "subtitle": "Tap to start the experience and load all CV details.",
+    "cta": "Start loading",
+    "loadingTitle": "Initializing profile",
+    "progressLabel": "Progress: {progress}%"
   }
 }
