--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -134,8 +134,8 @@
       "english": "अंग्रेजी स्तर"
     },
     "linkedinLabel": "LinkedIn",
-    "linkedinTitle": "LinkedIn ?? ?????? ????",
-    "linkedinDescription": "???? ???????????, ??????? ?? ???? ????? ??????"
+    "linkedinTitle": "Connect on LinkedIn",
+    "linkedinDescription": "Follow my projects, posts, and professional updates."
   },
   "footer": {
     "rights": "सर्वाधिकार सुरक्षित।",
@@ -184,9 +184,9 @@
     "error": "उत्तर प्राप्त करने में त्रुटि हुई। कृपया पुनः प्रयास करें।",
     "suggestions": {
       "skills": [
-        "?? ?????? ?? ?? ??????????? ??????????? ??? ???? ???? ???????",
-        "AI ?? ?????? ??????? ??????? ???? ????? ?????? ????",
-        "?? ???? ?? ???????? ????????? ??? ???? ????? ???"
+        "आपने AI में विशेषज्ञता क्यों चुनी?",
+        "आपकी सबसे मजबूत कौशल क्या है?",
+        "आपने ये तकनीकें कैसे सीखीं?"
       ],
       "projects": [
         "Conecta Panamá में सबसे बड़ी चुनौती क्या थी?",
@@ -199,9 +199,9 @@
         "आप किस प्रकार का काम ढूंढ रहे हैं?"
       ],
       "education": [
-        "???? ????? ?????? ?? ???? ??? ??????",
-        "???? AI ?????? ?????? ????? ?????",
-        "??????????? ??????????? ?? ???? ???? ?????"
+        "आप दो डिग्री क्यों पढ़ रहे हैं?",
+        "आप AI और Industrial Engineering को कैसे जोड़ते हैं?",
+        "आपके शैक्षणिक लक्ष्य क्या हैं?"
       ]
     }
   },
@@ -439,58 +439,58 @@
       "unknown": "अज्ञात त्रुटि।"
     },
     "customize": {
-      "title": "???? ?? ????????? ????",
-      "subtitle": "?????, ????????, ????? ?? ??? ????? ???? ????? CV ???? ??????",
+      "title": "Customize the demo",
+      "subtitle": "Adjust layout, spacing, cards, and colors to preview your ideal CV style.",
       "layout": {
-        "label": "????? ??????",
-        "4xl": "?????????",
-        "5xl": "???????",
-        "6xl": "????"
+        "label": "Layout width",
+        "4xl": "Compact",
+        "5xl": "Balanced",
+        "6xl": "Wide"
       },
       "density": {
-        "label": "?????? ?????",
-        "compact": "?????????",
-        "comfortable": "????????"
+        "label": "Content density",
+        "compact": "Compact",
+        "comfortable": "Comfortable"
       },
       "cardStyle": {
-        "label": "????? ????",
-        "solid": "?????",
-        "glass": "?????"
+        "label": "Card style",
+        "solid": "Solid",
+        "glass": "Glass"
       },
       "accent": {
-        "label": "??????? ???",
-        "blue": "????",
-        "emerald": "???????",
-        "amber": "????",
-        "violet": "??????"
+        "label": "Accent color",
+        "blue": "Blue",
+        "emerald": "Emerald",
+        "amber": "Amber",
+        "violet": "Violet"
       },
       "sections": {
-        "label": "??????",
-        "hero": "????",
-        "about": "?????",
-        "skills": "????",
-        "experience": "?????",
-        "education": "??????",
-        "projects": "??????????",
-        "certificates": "??????????",
-        "languages": "??????"
+        "label": "Sections",
+        "hero": "Hero",
+        "about": "About",
+        "skills": "Skills",
+        "experience": "Experience",
+        "education": "Education",
+        "projects": "Projects",
+        "certificates": "Certificates",
+        "languages": "Languages"
       },
       "actions": {
-        "visible": "????? ?? ???",
-        "hidden": "????",
-        "show": "??????",
-        "hide": "??????",
-        "moveUp": "???",
-        "moveDown": "????",
-        "reset": "?????"
+        "visible": "Visible",
+        "hidden": "Hidden",
+        "show": "Show",
+        "hide": "Hide",
+        "moveUp": "Move up",
+        "moveDown": "Move down",
+        "reset": "Reset"
       }
     }
   },
   "intro": {
-    "title": "?????????? CV ?????? ????",
-    "subtitle": "????? ???? ???? ?? ???? ??????? ??? ???? ?? ??? ??? ?????",
-    "cta": "??? ???? ????",
-    "loadingTitle": "????????? ??????? ?? ??? ??",
-    "progressLabel": "??????: {progress}%"
+    "title": "Activate interactive CV",
+    "subtitle": "Tap to start the experience and load all CV details.",
+    "cta": "Start loading",
+    "loadingTitle": "Initializing profile",
+    "progressLabel": "Progress: {progress}%"
   }
 }
