--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -134,8 +134,8 @@
       "english": "英語レベル"
     },
     "linkedinLabel": "LinkedIn",
-    "linkedinTitle": "LinkedIn?????????",
-    "linkedinDescription": "????????????????????????"
+    "linkedinTitle": "Connect on LinkedIn",
+    "linkedinDescription": "Follow my projects, posts, and professional updates."
   },
   "footer": {
     "rights": "全著作権所有。",
@@ -184,9 +184,9 @@
     "error": "回答の取得に失敗しました。もう一度お試しください。",
     "suggestions": {
       "skills": [
-        "??????????????????????",
-        "AI/???????????????????????????",
-        "?????????????????"
+        "なぜAIを専門に選んだのですか？",
+        "最も強いスキルは何ですか？",
+        "これらの技術はどうやって学びましたか？"
       ],
       "projects": [
         "Conecta Panamáで最大の課題は何でしたか？",
@@ -199,9 +199,9 @@
         "どのような仕事を探していますか？"
       ],
       "education": [
-        "????????????????",
-        "??AI?????????????",
-        "????????????????????"
+        "なぜ2つの学位を学んでいるのですか？",
+        "AIと産業工学をどう組み合わせていますか？",
+        "学術的な目標は何ですか？"
       ]
     }
   },
@@ -439,58 +439,58 @@
       "unknown": "不明なエラー。"
     },
     "customize": {
-      "title": "?????????",
-      "subtitle": "????????????????????????CV????????????",
+      "title": "Customize the demo",
+      "subtitle": "Adjust layout, spacing, cards, and colors to preview your ideal CV style.",
       "layout": {
-        "label": "??????",
-        "4xl": "?????",
-        "5xl": "????",
-        "6xl": "???"
+        "label": "Layout width",
+        "4xl": "Compact",
+        "5xl": "Balanced",
+        "6xl": "Wide"
       },
       "density": {
-        "label": "????",
-        "compact": "?????",
-        "comfortable": "??"
+        "label": "Content density",
+        "compact": "Compact",
+        "comfortable": "Comfortable"
       },
       "cardStyle": {
-        "label": "???????",
-        "solid": "????",
-        "glass": "???"
+        "label": "Card style",
+        "solid": "Solid",
+        "glass": "Glass"
       },
       "accent": {
-        "label": "????????",
-        "blue": "???",
-        "emerald": "?????",
-        "amber": "????",
-        "violet": "??????"
+        "label": "Accent color",
+        "blue": "Blue",
+        "emerald": "Emerald",
+        "amber": "Amber",
+        "violet": "Violet"
       },
       "sections": {
-        "label": "?????",
-        "hero": "????",
-        "about": "??",
-        "skills": "???",
-        "experience": "??",
-        "education": "??",
-        "projects": "??????",
-        "certificates": "??",
-        "languages": "??"
+        "label": "Sections",
+        "hero": "Hero",
+        "about": "About",
+        "skills": "Skills",
+        "experience": "Experience",
+        "education": "Education",
+        "projects": "Projects",
+        "certificates": "Certificates",
+        "languages": "Languages"
       },
       "actions": {
-        "visible": "???",
-        "hidden": "???",
-        "show": "??",
-        "hide": "???",
-        "moveUp": "??",
-        "moveDown": "??",
-        "reset": "????"
+        "visible": "Visible",
+        "hidden": "Hidden",
+        "show": "Show",
+        "hide": "Hide",
+        "moveUp": "Move up",
+        "moveDown": "Move down",
+        "reset": "Reset"
       }
     }
   },
   "intro": {
-    "title": "????????CV???",
-    "subtitle": "????????????CV???????????",
-    "cta": "??????",
-    "loadingTitle": "???????????",
-    "progressLabel": "?????{progress}%"
+    "title": "Activate interactive CV",
+    "subtitle": "Tap to start the experience and load all CV details.",
+    "cta": "Start loading",
+    "loadingTitle": "Initializing profile",
+    "progressLabel": "Progress: {progress}%"
   }
 }
