--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -134,8 +134,8 @@
       "english": "영어 수준"
     },
     "linkedinLabel": "LinkedIn",
-    "linkedinTitle": "LinkedIn?? ????",
-    "linkedinDescription": "????? ???, ?? ??? ?????."
+    "linkedinTitle": "Connect on LinkedIn",
+    "linkedinDescription": "Follow my projects, posts, and professional updates."
   },
   "footer": {
     "rights": "모든 권리 보유.",
@@ -184,9 +184,9 @@
     "error": "응답을 가져오는 중 오류가 발생했습니다. 다시 시도하세요.",
     "suggestions": {
       "skills": [
-        "? ??? ???? ??? ??? ??????",
-        "AI/??? ?? ??? ?? ??? ?????",
-        "? ??? ?? ?????? ?? ??? ????"
+        "왜 AI를 전공으로 선택했나요?",
+        "가장 강한 기술은 무엇인가요?",
+        "이 기술들을 어떻게 배웠나요?"
       ],
       "projects": [
         "Conecta Panamá에서 가장 큰 도전은 무엇이었나요?",
@@ -199,9 +199,9 @@
         "어떤 종류의 일을 찾고 있나요?"
       ],
       "education": [
-        "???? ??? ??? ???.",
-        "? AI ?? ??? ??????",
-        "????? ???? ?? ??? ??????"
+        "왜 두 개의 학위를 공부하나요?",
+        "AI와 산업공학을 어떻게 결합하나요?",
+        "학업 목표는 무엇인가요?"
       ]
     }
   },
@@ -439,58 +439,58 @@
       "unknown": "알 수 없는 오류입니다."
     },
     "customize": {
-      "title": "?? ?? ??",
-      "subtitle": "????, ??, ??, ??? ??? ???? CV ???? ?? ?????.",
+      "title": "Customize the demo",
+      "subtitle": "Adjust layout, spacing, cards, and colors to preview your ideal CV style.",
       "layout": {
-        "label": "???? ??",
-        "4xl": "???",
-        "5xl": "??",
-        "6xl": "???"
+        "label": "Layout width",
+        "4xl": "Compact",
+        "5xl": "Balanced",
+        "6xl": "Wide"
       },
       "density": {
-        "label": "??? ??",
-        "compact": "???",
-        "comfortable": "???"
+        "label": "Content density",
+        "compact": "Compact",
+        "comfortable": "Comfortable"
       },
       "cardStyle": {
-        "label": "?? ???",
-        "solid": "???",
-        "glass": "???"
+        "label": "Card style",
+        "solid": "Solid",
+        "glass": "Glass"
       },
       "accent": {
-        "label": "??? ??",
-        "blue": "??",
-        "emerald": "????",
-        "amber": "??",
-        "violet": "????"
+        "label": "Accent color",
+        "blue": "Blue",
+        "emerald": "Emerald",
+        "amber": "Amber",
+        "violet": "Violet"
       },
       "sections": {
-        "label": "??",
-        "hero": "??",
-        "about": "??",
-        "skills": "??",
-        "experience": "??",
-        "education": "??",
-        "projects": "????",
-        "certificates": "???",
-        "languages": "??"
+        "label": "Sections",
+        "hero": "Hero",
+        "about": "About",
+        "skills": "Skills",
+        "experience": "Experience",
+        "education": "Education",
+        "projects": "Projects",
+        "certificates": "Certificates",
+        "languages": "Languages"
       },
       "actions": {
-        "visible": "???",
-        "hidden": "??",
-        "show": "??",
-        "hide": "??",
-        "moveUp": "??",
-        "moveDown": "???",
-        "reset": "???"
+        "visible": "Visible",
+        "hidden": "Hidden",
+        "show": "Show",
+        "hide": "Hide",
+        "moveUp": "Move up",
+        "moveDown": "Move down",
+        "reset": "Reset"
       }
     }
   },
   "intro": {
-    "title": "????? CV ??",
-    "subtitle": "??? ??? ???? ?? CV ??? ?????.",
-    "cta": "?? ??",
-    "loadingTitle": "??? ??? ?",
-    "progressLabel": "???: {progress}%"
+    "title": "Activate interactive CV",
+    "subtitle": "Tap to start the experience and load all CV details.",
+    "cta": "Start loading",
+    "loadingTitle": "Initializing profile",
+    "progressLabel": "Progress: {progress}%"
   }
 }
